# bauer-agent

./: .editorconfig  .env.example  .gitattributes  .gitignore  AGENTS.md  BAUER_AGENT_RUNTIME_PLANO_COMPLETO.md  BauerAgent.md  CHANGELOG.md  Dockerfile  MANIFEST.in  README.md  action.json  agents.yaml  bauer-decisions.md  config.yaml  config.yaml.example  docker-compose.yml  install.ps1  install.sh  models.yaml  premortembauer.md  pyproject.toml  start.sh  test_request.json  tools.yaml
.github/agents/: linkedin-recruiter.agent.md
.github/workflows/: ci.yml  release.yml
bauer/: __init__.py  account_usage.py  agent.py  agent_lanes.py  agent_registry.py  agent_wizard.py  anthropic_client.py  app_factory.py  app_verify.py  approval.py  ascii_intro.py  audio_capture.py  audit_logger.py  audit_trail.py  auth.py  automation_scheduler.py  automation_store.py  autonomous_budget.py  autonomous_planner.py  auxiliary_client.py  background_review.py  benchmark.py  binary_scanner.py  channel_base.py  chat.py  chatgpt_backend.py  checkpoint.py  circuit_breaker.py  cli.py  code_intelligence.py  company_manager.py  config_admin.py  config_loader.py  config_profiles.py  context_manager.py  contracts.py  cost_meter.py  cost_tracker.py  credential_pool.py  daemon.py  (+125 more)
bauer/commands/: __init__.py  _common.py  _runtime.py  agent_cmd.py  approvals_cmd.py  audit_cmd.py  auth_cmd.py  benchmark_cmd.py  boards_cmd.py  budget_cmd.py  company_cmd.py  config_cmd.py  cost_cmd.py  credential_cmd.py  cron_cmd.py  daemon_cmd.py  discord_cmd.py  dispatch_cmd.py  events_cmd.py  factory_cmd.py  gateway_cmd.py  home_cmd.py  kernel_cmd.py  learning_cmd.py  memory_cmd.py  migrate_cmd.py  models_cmd.py  ops_cmd.py  orchestrate_cmd.py  perf_cmd.py  plugin_cmd.py  project_cmd.py  research_cmd.py  run_cmd.py  runs_cmd.py  runtime_cmd.py  schedule_cmd.py  serve_cmd.py  sessions_cmd.py  setup_cmd.py  (+10 more)
bauer/core/: __init__.py
bauer/data/: external_integrations.yaml
bauer/lsp/: __init__.py  client.py  manager.py  servers.py
bauer/static/: index.html
bauer/tools/: __init__.py  agent_misc.py  base.py  browser.py  channel.py  code_intel.py  cronjob.py  execution.py  factory.py  fs.py  kanban.py  mcp.py  media.py  memory.py  session.py  skills.py  social.py  utility.py  web.py
bauer/web/: __init__.py  dispatcher.py
benchmarks/: docker-diagnosis.yaml  mini-api.yaml  site-barbearia.yaml  windows-control.yaml
config/: policy.yaml
desktop/: .gitignore  README.md  index.html  package-lock.json  package.json  vite.config.ts
desktop/src/: App.tsx  main.tsx  styles.css
desktop/src-tauri/: Cargo.toml  tauri.conf.json
desktop/src-tauri/capabilities/: default.json
desktop/src-tauri/icons/: icon.icns
desktop/src-tauri/loader/: index.html
desktop/src-tauri/src/: lib.rs  main.rs
docs/: AUTONOMY_ROADMAP.md  BAUER_AUDITORIA_GOVERNANCA.md  BAUER_FASE_11_AUDITORIA_GOVERNANCA_PLANO.md  BETA_CLOSED.md  Plano_Consolidacao_Bauer_Kernel.md  RFC-005-bauer-os.md  ROADMAP.md  release.md
docs/architecture/: agent-lanes.yaml  agent-routing-v2.yaml  automation-scheduler.yaml  dispatcher-runtime-v2.yaml  dispatcher-runtime.yaml  gateway-real-spec.yaml  kanban-store.yaml  level8-gap-closure.yaml  ops-status.yaml  orchestration-engine.yaml  tool-context-gating.yaml  tool-policy.yaml  (+1 more)
experiments/: agno_minimal_agent.py
plans/: 001-fix-http-exception-detail.md  002-fix-api-key-timing-attack.md  003-fix-info-endpoints-auth.md  004-fix-xor-fallback.md  005-commands-integration-tests.md  006-distributed-agents-mvp.md  007-auth-key-file-permissions.md  008-webhook-ssrf-guard.md  009-server-request-body-limits.md  010-orchestrator-resume-robustness.md  011-context-budget-regression-tests.md  012-agents-md-claude-md.md  013-agent-extract-slash-commands.md  014-spike-autonomous-daemon-24-7.md  015-spike-learned-provider-profiles.md  016-spike-policy-router-cost-ledger.md  017-spike-memory-consolidation-feedback-loop.md  018-spike-taint-tracking-accountability.md  019-spike-self-improving-skills-mcp-server.md  020-spike-proactive-agent-unified-identity.md  021-bauer-run-autonomous-entrypoint.md  022-bauer-run-e-simplificacao-cli.md  023-auditoria-completa-2026-07.md  023-system-prompt-mode-aware-tools.md  024-app-factory-integration-serve.md  024-spike-task-store-migration.md  025-system-prompt-os-aware.md  026-tool-capability-detection.md  027-doctor-agentic-stack-checks.md  README.md
tests/: conftest.py  test_account_usage.py  test_agent.py  test_agent_coverage.py  test_agent_extended.py  test_agent_loop_cmd.py  test_agent_loop_elite.py  test_agent_registry.py  test_agent_registry_match.py  test_agent_system_prompt.py  test_agno_runtime_adapter.py  test_app_factory.py  test_app_factory_serve.py  test_app_verify.py  test_approval.py  test_audio_capture.py  test_audit_phase11.py  test_auth.py  test_auth_coverage.py  test_automation_scheduler.py  test_autonomous_budget.py  test_autonomous_planner.py  test_autonomy_phase3.py  test_auxiliary_client.py  test_background_review.py  test_binary_scanner.py  test_channel_base.py  test_channel_tools.py  test_chatgpt_backend.py  test_circuit_breaker.py  test_cli.py  test_cli_boards.py  test_cli_commands2.py  test_cli_desktop.py  test_cli_extended.py  test_cli_extra_coverage.py  test_cli_kanban_llm.py  test_cli_routing.py  test_code_intelligence.py  test_command_confirmation.py  (+195 more)
tmp/: agno_spike_test.db  pytest-sprint14-full-after-fix.txt  pytest-sprint14-full.txt  pytest-sprint15-full.txt  pytest-sprint16-full.txt  pytest-sprint17-full.txt  pytest-sprint18-full.txt  pytest-sprint19-full.txt  pytest-sprint20-full.txt  pytest-sprint21-full.txt
(+223 files in other folders)
