[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "bauer-agent"
version = "0.1.0"
description = "Runtime adaptativo para LLMs locais — sobe com o que tem, ajusta o que precisa, avisa claramente."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Henrique Ferraz Moura" }]
dependencies = [
    "typer>=0.12",
    "rich>=13.7",
    "pydantic>=2.6",
    "pyyaml>=6.0",
    "httpx>=0.27",
    "psutil>=5.9",
    "prompt-toolkit>=3.0",
]

[project.optional-dependencies]
keychain = [
    "keyring>=24.0",
]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "pytest-asyncio>=0.23",
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
    "websockets>=12.0",
]
server = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
]
gateway = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
    "websockets>=12.0",
]
all = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
    "websockets>=12.0",
]

[project.scripts]
bauer = "bauer.cli:app"

[tool.setuptools.packages.find]
include = ["bauer*"]
exclude = ["tests*", "memory*", "workspace*", "logs*"]

[tool.setuptools.package-data]
bauer = ["*.yaml", "*.json", "py.typed"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
asyncio_mode = "auto"
