[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "bauer-agent"
version = "0.2.0"
description = "Runtime adaptativo para LLMs locais — sobe com o que tem, ajusta o que precisa, avisa claramente."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Henrique Ferraz Moura" }]
dependencies = [
    "typer>=0.12",
    "rich>=13.7",
    "pydantic>=2.6",
    "pyyaml>=6.0",
    "httpx>=0.27",
    "psutil>=5.9",
    "prompt-toolkit>=3.0",
    "cryptography>=41.0",
]

[project.optional-dependencies]
keychain = [
    "keyring>=24.0",
]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "pytest-asyncio>=0.23",
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
    "websockets>=12.0",
    "python-multipart>=0.0.9",
]
server = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
    "python-multipart>=0.0.9",
]
gateway = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
    "websockets>=12.0",
    "python-multipart>=0.0.9",
]
web = [
    "ddgs>=6.0",             # DuckDuckGo (MIT) — busca web geral open-source
    "beautifulsoup4>=4.12",  # extração de conteúdo limpo no web_fetch
]
voice = [
    # STT local offline — pesos open-source do Whisper (large-v3-turbo) via
    # CTranslate2. Sem nuvem, sem API key. Baixa ~1.5GB no primeiro uso.
    "faster-whisper>=1.0.0",
]
all = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
    "websockets>=12.0",
    "python-multipart>=0.0.9",
    "ddgs>=6.0",
    "beautifulsoup4>=4.12",
    "faster-whisper>=1.0.0",
]

[project.scripts]
bauer = "bauer.cli:app"

[tool.setuptools.packages.find]
include = ["bauer*"]
exclude = ["tests*", "memory*", "workspace*", "logs*"]

[tool.setuptools.package-data]
bauer = [
    "*.yaml", "*.json", "py.typed",
    # Dados embutidos: skills do hub + templates da App Factory (Spec-Driven).
    # Inclui dotfiles (.env.example) e extensões variadas (.md/.yml) em subdirs.
    "data/**/*.yaml", "data/**/*.yml", "data/**/*.json", "data/**/*.md",
    "data/app_factory/templates/.env.example",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
asyncio_mode = "auto"

[tool.ruff.lint]
# Selecao de regras versionada aqui para manter CI e editor em sincronia.
# Bloqueante no CI (job lint-critical): E9, F63, F7, F82
# Informativo no CI (job lint): E, F, W com as excecoes abaixo
select = ["E", "F", "W"]
# E501: linhas longas — aceito no projeto (cli.py/tool_router.py tem linhas necessariamente longas)
# W291/W293: trailing whitespace — ruido sem impacto funcional
# E302/E303: blank lines — nao seguimos PEP8 rigido aqui
ignore = ["E501", "W291", "W293", "E302", "E303"]
